# gostuff

assignment/: main.go
assignment_read/: main  main.go  text.text
cards/: deck.go  deck_test.go  main.go  my_cards
channel/: channels.go  main.go  unbaffered.go  worker_pool.go
channels/: main.go  notes.txt
even_odd/: main.go
graphql_cloudflare/: client.go  config.go  main.go  old.text
helloworld/: main  main.go
http/: main.go
http_requests/: main.go
intefaces/: main.go  notes
map/: main.go
oauth2/: BUILD.bazel  README.md  limiter.go  prefix.go  prefix_test.go  transport.go
snippeedbox/: go.mod
snippeedbox/cmd/web/: handlers.go  main.go  routes.go
structs/: main.go  notes
test/: main.go
